public,home,resume,portfolio,contact,blog,partials

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,6 @@
-
+:root {
+    --primary: rgb(255, 187, 92);
+}
 body {
 	background-color: hsl(0, 0%, 7%);
     color: white;
@@ -20,20 +22,15 @@ body {
     margin: 16px 0;
 }
 .user-image {
-	background: linear-gradient(
-    to bottom right, 
-    hsl(240, 1%, 25%) 3%, 
-    hsl(0, 0%, 19%) 97%
-  );
 	border-radius: 5px;
 	height: 100px;
 	width: 100px;
 }
 
 .image {
-	border-radius: 5px;
-	height: 100px;
-	width: 100px;
+	border-radius: 100%;
+	height: 130px;
+	width: 130px;
 }
 
 .separator {
@@ -47,7 +44,7 @@ body {
     border-radius: 12px;
     font-size: 18px;
     background: linear-gradient( to bottom right, hsl(0, 0%, 25%) 0%, hsla(0, 0%, 25%, 0) 50% );
-    color: hsl(45, 100%, 72%);
+    color: var(--primary);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,23 +72,21 @@ body {
 .menu{
 	background-color: hsl(240, 2%, 12%);
 	padding: 20px;
-	border-bottom-left-radius: 20px ;
+	border-bottom-left-radius: 20px;
 	border-top-right-radius: 20px;
 	width: max-content;
 }
-.about {
 
-}
 .heading-border {
 	height: 5px;
 	width: 40px;
-	background-color: rgb(255, 187, 92);
+	background-color: var(--primary);
 	border-radius: 5px;
 }
 
 .text {
 	color: hsl(0, 0%, 84%);
-	padding-top: 5px;
+    padding-top: 5px;
 	font-size: 18px;
 }
 
@@ -131,23 +126,46 @@ body {
 	top: -40px;
 	left: 30px;
 	position: absolute;
-	display: flex;
 	align-items: flex-end;
+    display: flex;
+}
+.card-designation {
+    font-size: 12px;
 }
 
 .text-card-testmonials {
 	margin-top: 50px;
 	padding-left: 25px;
+    padding-top:20px;
 }
 
 .testimonial-border {
 	height: 5px;
 	width: 40px;
-	background-color: gold;
+	background-color: var(--primary);
 	border-radius: 5px;
 }
+@media only screen and (max-width:768px) {
+    .card-testmonials-top {
+        display: block;
+        position: relative;
+        top:0px;
+        left: 0px;
+    }
+    .text-card-testmonials {
+        padding-top: 0px;
+        margin-top: 0px;
+        padding-left: 0px;
+    }
+    .card-testmonials {
+        text-align: center;
+    }
+    .card-image-testmonials {
+        margin-bottom: 10px;
+    }
+}
 .swiper-scrollbar {
-	background: gold;
+	background: var(--primary);
 	border-radius: 2px;
   	height: 5px;
   	width: 200px;
@@ -204,7 +222,7 @@ body {
 .gd-warning {
     color: #fff;
     border: none;
-    background: #f4c414 linear-gradient(45deg, #f4c414, #f45414)
+    background: var(--primary)
 }
 
 .timeline {
@@ -234,7 +252,7 @@ body {
 }
 
 .tl-item.active .tl-dot:before {
-    border-color: gold;
+    border-color: var(--primary);
     box-shadow: 0 0 0 4px hwb(50 1% 0% / 0.2)
 }
 
@@ -243,7 +261,7 @@ body {
 }
 
 .tl-item.active .tl-dot:before {
-    border-color: gold;
+    border-color: var(--primary);
     box-shadow: 0 0 0 4px rgba(68, 139, 255, .2)
 }
 
@@ -279,7 +297,7 @@ body {
 }
 
 .tl-item.active .tl-dot:before {
-    border-color: gold;
+    border-color: var(--primary);
     box-shadow: 0 0 0 4px rgba(68, 139, 255, .2)
 }
 
@@ -345,32 +363,34 @@ body {
 }
 
 .b-warning {
-    border-color: rgb(255, 187, 92) !important;
+    border-color: var(--primary) !important;
 }
 
 .b-primary {
-    border-color: rgb(255, 187, 92) !important;
+    border-color: var(--primary) !important;
 }
 
 .b-danger {
-    border-color: rgb(255, 187, 92) !important;
+    border-color: var(--primary) !important;
 }
-.text {
-    color: rgb(255, 187, 92);
+.about-text {
+    color: var(--primary);
+    padding-top: 5px;
+	font-size: 18px;
 }
 .progress-skill .progress-bar{
-    background-color: rgb(255, 187, 92);
+    background-color: var(--primary);
 }
 .progress-skill {
     height: 10px;
 }
 .button {
     background-color: rgba(160, 175, 185, .15);
-    color: #f4c414;
+    color: var(--primary);
 }
 .show-contact {
     background-color: rgba(160, 175, 185, .15);
-    color: #f4c414;
+    color: var(--primary);
     display: none;
     text-align: right;
     border-top-right-radius: 15px;
@@ -381,7 +401,7 @@ body {
 @media only screen and (max-width: 1024px) {
     .show-contact {
         display: block;
-     }
+    }
 }
 
 @media only screen and (max-width: 450px){
@@ -393,11 +413,11 @@ body {
 }
 .form-control {
     background-color: hsl(0, 0%, 22%);
-    border-color: #f4c414;
+    border-color: var(--primary);
 }
 
 .button-contact {
-    border: 2px solid #f4c414;
+    border: 2px solid var(--primary);
     border-radius: 10px;
     background-color: hsl(0, 0%, 22%);
 }
@@ -419,7 +439,7 @@ body {
 
 }
 .text-conference:hover{
-    color: #f4c414;
+    color: var(--primary);
     font-weight: bold;
 }
 .blog {
@@ -441,3 +461,13 @@ body {
     height: 200px;
     width: 100%;
 }
+.service-icon {
+    color: var(--primary);
+    font-size: 100px;
+    padding: 10px;
+}
+
+
+
+
+
